# flash-cat

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  install.ps1  install.sh  install_cn.ps1  install_cn.sh  maskfile.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: publish-existing-release.yml  release.yml
app/: Cargo.toml  build.rs
app/assets/logos/icons/: .VolumeIcon.icns  icon.icns
app/locales/: en.toml  en.yaml  zh.toml  zh.yaml
app/src/: assets.rs  lib.rs  main.rs  message.rs  state.rs
app/src/components/: card.rs  mod.rs  progress_bar.rs
app/src/folder/: mod.rs
app/src/gui/: assets.rs  mod.rs  progress_bar_widget.rs
app/src/gui/styles/: button_styles.rs  colors.rs  container_styles.rs  scrollable_styles.rs  svg_styles.rs  text_styles.rs  theme.rs
app/src/gui/tabs/: mod.rs
app/src/gui/tabs/receiver_tab/: mod.rs  receiver.rs
app/src/gui/tabs/sender_tab/: mod.rs  pick_path_widget.rs  picked_body_widget.rs  sender.rs
app/src/gui/tabs/settings_tab/: about_widget.rs  appearance_widget.rs  general_widget.rs  mod.rs
app/src/helpers/: action.rs  fs.rs  i18n.rs  mod.rs
app/src/views/: about.rs  content.rs  header.rs  mod.rs  receive.rs  send.rs  settings.rs  tab.rs  title_bar.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  progress.rs  receive.rs  send.rs  update.rs
common/: Cargo.toml  build.rs
common/proto/: relay.proto
common/src/: consts.rs  format.rs  lib.rs  logger.rs  version.rs
common/src/crypt/: encryptor.rs
common/src/utils/: mod.rs
common/src/utils/fs/: mod.rs
common/src/utils/net/: mod.rs  net_scout.rs
core/: Cargo.toml
core/src/: lib.rs  receiver.rs  sender.rs
relay/: Cargo.toml
relay/src/: grpc.rs  lib.rs  listen.rs  main.rs  relay.rs  session.rs
