[workspace]
resolver = "2"
members = [
    "app",
    "cli",
    "common",
    "core",
    "relay",
]

[workspace.package]
authors = ["Yunis Du <yunis@88.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yunis-du/flash-cat"

[workspace.dependencies]
flash_cat_app = { version = "0.1.0", path = "app" }
flash_cat_cli = { version = "0.1.0", path = "cli" }
flash_cat_common = { version = "0.1.0", path = "common" }
flash_cat_core = { version = "0.1.0", path = "core" }
flash_cat_relay = { version = "0.1.0", path = "relay" }

anyhow = "1.0.80"
async-channel = "2.2.0"
async-stream = "0.3.5"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "env"] }
chrono = "0.4.35"
dashmap = "5.5.3"
indicatif = "0.17.8"
prost = "0.12.3"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots"] }
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
