[workspace]
resolver = "2"
members = [
    "app",
    "cli",
    "common",
    "core",
    "relay",
]

[workspace.package]
authors = ["Yunis Du <yunis@88.com>"]
license = "MIT"
version = "2.0.4"
description= "Securely send the file folder from one computer to another computer."
edition = "2021"
repository = "https://github.com/yunis-du/flash-cat"
rust-version = "1.80"

[workspace.dependencies]
flash_cat_common = {path = "common" }
flash_cat_core = {path = "core" }
flash_cat_relay = {path = "relay" }

anyhow = "1"
async-channel = "2"
async-stream = "0.3"
built = { version = "0.7.4", features = ["chrono", "git2"] }
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4.35"
confy = "0.6"
dashmap = "6"
indicatif = "0.17"
prost = "0"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
