[workspace]
resolver = "2"
members = [
    "app",
    "cli",
    "common",
    "core",
    "relay",
]

[workspace.package]
authors = ["Yunis Du <yunis@88.com>"]
license = "MIT"
version = "2.1.7"
description= "Securely send the file folder from one computer to another computer."
edition = "2024"
repository = "https://github.com/yunis-du/flash-cat"
rust-version = "1.85"

[workspace.dependencies]
flash_cat_common = {path = "common" }
flash_cat_core = {path = "core" }
flash_cat_relay = {path = "relay" }

anyhow = "1"
async-channel = "2"
async-stream = "0.3"
built = { version = "0.8", features = ["chrono", "git2"] }
bytes = { version = "1", features = ["serde"] }
chrono = "0.4.35"
clap = { version = "4.5", features = ["derive", "env"] }
confy = "2.0"
dashmap = "6"
indicatif = "0.18"
log = "0.4"
parking_lot = "0.12"
prost = "0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
zip = "6.0.0"
