[package]
name = "flash_cat_app"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="flash-cat-app"
path="src/main.rs"

[dependencies]
anyhow.workspace = true
confy.workspace = true
flash_cat_common.workspace = true
flash_cat_core.workspace = true
indicatif.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
directories = "6.0"
iced = { version = "0.13", features = ["image", "svg", "tokio", "wgpu"] }
iced_aw = "0.12"
open = "5.3.0"
rfd = "0.16"
webbrowser = "1"

[build-dependencies]
built.workspace = true
