[package]
name = "flash_cat_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="flash-cat"
path="src/main.rs"

[dependencies]
flash_cat_common = { workspace = true, features = ["progress"] }
flash_cat_core.workspace = true

anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
indicatif.workspace = true
