[package]
name = "flash_cat_cli"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="flash-cat"
path="src/main.rs"

[dependencies]
flash_cat_common = { workspace = true, features = ["progress"] }
flash_cat_core.workspace = true
flash_cat_relay.workspace = true

anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
log.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
indicatif.workspace = true
zip.workspace = true
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
flate2 = "1.1.5"
tar = "0.4.44"

[build-dependencies]
built.workspace = true

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-musl]
name = "flash-cat"
release = "1.el8"
description = "Securely send the file folder from one computer to another computer."
license = "MIT"
maintainer = "Yunis <yunis@88.com>"
url = "https://github.com/yunis-du/flash-cat"
assets = [
    # binary
    { source = "target/release/flash-cat", dest = "/usr/bin/flash-cat", mode = "755" },
]

[package.metadata.generate-rpm.variants.aarch64-unknown-linux-musl]
name = "flash-cat"
release = "1.el8"
description = "Securely send the file folder from one computer to another computer."
license = "MIT"
maintainer = "Yunis <yunis@88.com>"
url = "https://github.com/yunis-du/flash-cat"
assets = [
    # binary
    { source = "target/release/flash-cat", dest = "/usr/bin/flash-cat", mode = "755" },
]

# [package.metadata.generate-rpm.requires]
# CompressedFileNames = "<= 3.0.4-1"

[package.metadata.deb.variants.x86_64-unknown-linux-musl]
name = "flash-cat"
maintainer = "Yunis <yunis@88.com>"
license-file = ["../LICENSE", "4"]
extended-description = "Securely send the file folder from one computer to another computer."
section = "main"
assets = [
    # binary
    { source = "target/release/flash-cat", dest = "/usr/bin/flash-cat", mode = "755" },
]

[package.metadata.deb.variants.aarch64-unknown-linux-musl]
name = "flash-cat"
maintainer = "Yunis <yunis@88.com>"
license-file = ["../LICENSE", "4"]
extended-description = "Securely send the file folder from one computer to another computer."
section = "main"
assets = [
    # binary
    { source = "target/release/flash-cat", dest = "/usr/bin/flash-cat", mode = "755" },
]
