[package]
name = "flash_cat_relay"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flash_cat_common.workspace = true

anyhow.workspace = true
async-channel.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
tonic-reflection = "0.11.0"
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.5.2", features = ["fs", "redirect", "trace"] }
