[package]
name = "flash_cat_relay"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flash_cat_common.workspace = true

anyhow.workspace = true
async-channel.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
log.workspace = true
parking_lot.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tower = { version = "0.5", features = ["steer"] }
tower-http = { version = "0.6", features = ["fs", "redirect", "trace"] }

[build-dependencies]
built.workspace = true
